Fixed horizontal overflow issue with about and contact sections after adjusting animations

--- a/app/scss/_about.scss
+++ b/app/scss/_about.scss
@@ -1,6 +1,7 @@
 .about {
   background-color: var(--clr-neutral-800);
   padding-top: var(--size-700);
+  overflow: hidden;
 
   @include breakpoint-up(mobile-small) {
     padding-top: var(--size-800);
