--- a/app/scss/_contact.scss
+++ b/app/scss/_contact.scss
@@ -2,6 +2,7 @@
   background-color: var(--clr-neutral-900);
   padding-top: var(--size-700);
   padding-bottom: var(--size-500);
+  overflow: hidden;
 
   @include breakpoint-up(mobile-small) {
     padding-top: var(--size-800);
